--- a/experiment/simulation/css/style.css
+++ b/experiment/simulation/css/style.css
@@ -354,20 +354,24 @@ button:focus {
 
 /*check connection and reset button*/
 
+button:disabled{
+    cursor:not-allowed;
+    opacity:0.6;
+}
 .bottom {
     height: 60px;
     text-align: center;
 }
 
 .bottom button {
-    margin: 10px 80px 10px 80px;
+    margin: 15px 80px 10px 80px;
     height: 40px;
     width: 210px;
     font-size: 15px;
     border: none;
     font-weight: bold;
     border-radius: 25px;
-    cursor: pointer;
+   
     color: white;
 }
 
@@ -379,7 +383,7 @@ button:focus {
 #check:hover {
     color: rgb(0, 168, 8);
     background: white;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 #reset {
@@ -390,7 +394,7 @@ button:focus {
 #reset:hover {
     color: rgb(255, 54, 54);
     background: white;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 
@@ -617,6 +621,8 @@ tbody input {
     bottom: 50px;
     transform: translateX(100%);
     transition: transform 0.4s ease-in-out;
+    z-index: 9999;
+    overflow: scroll;
 }
 
 .Button-data.visible {
